:bug: Fix to collapse design about tutorial modal

--- a/app/static_src/less/helpers/util.less
+++ b/app/static_src/less/helpers/util.less
@@ -1,5 +1,5 @@
 .none {
-  display: none !important;
+  display: none;
 }
 
 .inline-block {
